Add new Cassandra data model changes from MP repo to COMAAS
Change-Id: I7def739d5ebaed5b4031cc04fc237c79cd728120
Reviewed-on: https://gerrit.ecg.so/38167
Tested-by: Gerrit-At-Gitmaster001
Reviewed-by: Remmelt Pit <rpit@ebay.com>
Reviewed-by: Jasper Van Veghel <jvanveghel@ebay.com>
Reviewed-by: Gerrit-At-Gitmaster001
Reviewed-by: Andrei Neacsu <aneacsu@marktplaats.nl>